# fifostr

./: .gitignore  .travis.yml  Makefile  README-content.html  README.md  README.rst  example.py  fifostr.py  gittag.py  index.html  runbuild.sh  setup.cfg  setup.py
dev/: Makefile  fifostr-todo.md
docs/: fifostr.html  index.html
fifostr/: __init__.py  fifostr.py
tests/: example.py  test_fifostr.py
web/: bitwrench.min.js
