[bdist_wheel]
# This flag says that the code is written to work on both Python2 and Python3
universal=1

# If at all possible, it is good practice to do this. If you cannot, you
# will need to generate wheels for each Python version that you support so if you modify fifostr, ]
# keep in mind python language specifics for dependancies


[metadata]
description-file = README.rst

[upload-docs]
upload-dir = docs/build/html
